[package]
name = "mxr-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mxr-core = { workspace = true }
mxr-reader = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
mxr-test-support = { workspace = true }
pretty_assertions = { workspace = true }
