[package]
name = "mxr-humanizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal: deterministic AI-writing smell scoring for mxr drafts"
publish = false

[lints]
workspace = true

[dependencies]
mxr-core = { workspace = true }
serde = { workspace = true }
