[package]
name = "mxr-keychain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal: OS keychain integration for mxr account secrets"


[lints]
workspace = true

[dependencies]
keyring = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
security-framework-sys = { workspace = true }
