[package]
name = "mxr-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal: LLM provider trait + OpenAI-compatible HTTP client (Ollama, LM Studio, OpenAI, Groq, OpenRouter)"
publish = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
