[package]
name = "mail-query"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"
repository = "https://github.com/planetaryescape/mail-query"
homepage = "https://github.com/planetaryescape/mail-query"
documentation = "https://docs.rs/mail-query"
description = "Parser and typed AST for Gmail-style email search queries. Backend-agnostic."
readme = "README.md"
keywords = ["email", "gmail", "search", "query", "parser"]
categories = ["email", "parser-implementations"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "testdata/**",
    "tests/**",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "warn"
panic = "warn"
todo = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["dep:serde", "chrono/serde"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
