[package]
name = "mail-threading"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mail-threading"
description = "Spec-aligned client-side email threading using RFC 5256/JWZ references."
readme = "README.md"
keywords = ["email", "threading", "jwz", "imap", "rfc5256"]
categories = ["algorithms", "email"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "testdata/**",
    "tests/**",
]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
