[package]
name = "mailbox-formats"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"
repository = "https://github.com/planetaryescape/mailbox-formats"
homepage = "https://github.com/planetaryescape/mailbox-formats"
documentation = "https://docs.rs/mailbox-formats"
description = "Read and write classic local-mail storage formats: mbox (mboxo/rd/cl/cl2) and Maildir."
readme = "README.md"
keywords = ["email", "mbox", "maildir", "mboxrd", "rfc4155"]
categories = ["email", "filesystem", "parser-implementations"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "testdata/**",
    "tests/**",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "warn"
panic = "warn"
todo = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
bitflags = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
tempfile = "3"
