[package]
name = "mxr-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "mxr_mcp"
path = "src/lib.rs"

[[bin]]
name = "mxr-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mxr-config = { workspace = true }
mxr-core = { workspace = true }
mxr-protocol = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-io"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
