[package]
name = "mxr-protocol"
version = "0.4.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "IPC protocol types for mxr daemon-client communication"

[dependencies]
mxr-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
