[package]
name = "mxr-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[lints]
workspace = true

[dependencies]
mxr-core = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
proptest = "1"
tokio = { workspace = true }
