[package]
name = "mxr-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal: IPC contract types between mxr's daemon and clients"
publish = false


[lints]
workspace = true

[features]
default = []
# Enables utoipa::ToSchema derives on every IPC payload type. The bridge
# crate (`mxr-web`) turns this on; TUI/CLI clients don't need it.
openapi = ["dep:utoipa", "mxr-core/openapi"]

[dependencies]
mxr-core = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1"
tokio = { workspace = true }
