[package]
name = "mxr-provider-fake"
version = "0.4.16"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-memory test provider for mxr"

[dependencies]
mxr-core = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
insta = { workspace = true }
