[package]
name = "mxr-provider-gmail"
version = "0.4.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Gmail API adapter for mxr"

[dependencies]
mxr-core = { workspace = true }
mxr-compose = { workspace = true }
yup-oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
mxr-test-support = { workspace = true }
insta = { workspace = true }
mxr-provider-fake = { workspace = true }
mail-parser = { workspace = true }
