[package]
name = "mxr-provider-imap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mxr-core = { workspace = true }
mxr-keychain = { workspace = true }
mxr-mail-parse = { workspace = true }
async-imap = { workspace = true }
async-native-tls = { workspace = true }
async-std = { version = "1", features = ["default"] }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
mail-parser = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
mxr-provider-fake = { workspace = true }
mxr-test-support = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
