[package]
name = "mxr-provider-smtp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SMTP send adapter for mxr"

[dependencies]
mxr-core = { workspace = true }
mxr-compose = { workspace = true }
lettre = { workspace = true }
keyring = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
