[package]
name = "mxr-provider-smtp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mxr-core = { workspace = true }
mxr-keychain = { workspace = true }
mxr-outbound = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
lettre = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mxr-provider-fake = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
