[package]
name = "mxr-reader"
version = "0.4.16"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Reader mode (HTML to text, signature and quote stripping) for mxr"

[dependencies]
mxr-core = { workspace = true }
html2text = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
mxr-test-support = { workspace = true }
insta = { workspace = true }
mail-parser = { workspace = true }
serde_json = { workspace = true }
