[package]
name = "mxr-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal: HTML-to-text reader-mode pipeline for mxr"


[lints]
workspace = true

[dependencies]
data-url = { workspace = true }
html2text = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
mail-parser = { workspace = true }
mxr-test-support = { workspace = true }
serde_json = { workspace = true }
