[package]
name = "mxr-relationship"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal: relationship profiles, stylometry, and voice matching for mxr"
publish = false

[lints]
workspace = true

[dependencies]
mxr-core = { workspace = true }
mxr-llm = { workspace = true }
mxr-reader = { workspace = true }
mxr-store = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base16ct = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
