[package]
name = "mxr-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[lints]
workspace = true

[dependencies]
mxr-core = { workspace = true }
chrono = { workspace = true }
glob-match = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
