[package]
name = "mxr-search"
version = "0.4.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tantivy-based full-text search for mxr"

[dependencies]
mxr-core = { workspace = true }
mxr-store = { workspace = true }
tantivy = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
