[package]
name = "mxr-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[lints]
workspace = true

[dependencies]
mxr-core = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tantivy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
